upgrading to latest api snapshot and applying minor code improvements